syntax = "proto3";
package kava.pricefeed.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/kava-labs/kava/x/pricefeed/types";

// Market defines an asset in the pricefeed.
message Market {
  option (gogoproto.goproto_stringer) = false;

  string market_id = 1;
  string base_asset = 2;
  string quote_asset = 3;
  repeated string oracles = 4;
  bool active = 5;
}

// PostedPrice defines a price for market posted by a specific oracle.
message PostedPrice {
  option (gogoproto.goproto_stringer) = false;

  string market_id = 1 [ (gogoproto.moretags) = "yaml:\"market_id\"", (gogoproto.customname) = "MarketID" ];
  string oracle_address = 2
      [ (gogoproto.moretags) = "yaml:\"oracle_address\"" ];
  string price = 3 [
    (gogoproto.moretags) = "yaml:\"price\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp expiry = 4 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"expiry\""
  ];
}

// CurrentPrice defines a current price for a particular market in the pricefeed
// module.
message CurrentPrice {
  option (gogoproto.goproto_stringer) = false;

  string market_id = 1 = [(gogoproto.customname) = "MarketID"];
  string price = 2 [
    (gogoproto.moretags) = "yaml:\"price\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
